implemented the skeleton structure for the project
