# pkg/media/controller.go
@@ -1,15 +1,13 @@
 package media
 
 import (
-	"MediaDex/database/dbmodel"
-	"mediadex/mediadex-API/config"
-	"mediadex/mediadex-API/database/dbmodel"
-	"mediadex/mediadex-API/pkg/model"
+	"mediadex/config"
+	"mediadex/database/dbmodel"
 	"net/http"
+	"strconv"
 
 	"github.com/go-chi/chi"
 	"github.com/go-chi/render"
-	"github.com/google/uuid"
 )
 
 type MediaConfig struct {
@@ -26,16 +24,16 @@ func New(config *config.Config) *MediaConfig {
 // @Tags         Media
 // @Accept       json
 // @Produce      json
-// @Param        media  body      model.MediaRequest  true  "Media creation payload"
+// @Param        media  body      MediaRequest  true  "Media creation payload"
 // @Security     BearerAuth
-// @Success      200    {object}  model.MediaResponse
+// @Success      200    {object}  MediaResponse
 // @Failure      400    {object}  map[string]string  "Invalid Media POST request payload !"
 // @Failure      500    {object}  map[string]string  "Failed to create Media !"
 // @Router       /api/v1/media [post]
 func (config *MediaConfig) PostHandler(w http.ResponseWriter, r *http.Request) {
 
 	// Get the request.
-	req := &model.MediaRequest{}
+	req := &MediaRequest{}
 	if err := render.Bind(r, req); err != nil {
 		render.Status(r, http.StatusBadRequest)
 		render.JSON(w, r, map[string]string{"Error": "Invalid Media POST request payload !" + err.Error()})
@@ -44,13 +42,13 @@ func (config *MediaConfig) PostHandler(w http.ResponseWriter, r *http.Request) {
 
 	// Convert the requested data into dbmodel.Media type for the "Create" function.
 	media := &dbmodel.Media{
-		userId:    *req.userId,
-		name:      *req.name,
-		status:    *req.status,
-		mediaType: *req.mediaType,
-		imgURL:    *req.imgURL,
-		rating:    *req.rating,
-		notes:     *req.notes}
+		UserId:    req.UserId,
+		Name:      req.Name,
+		Status:    req.Status,
+		MediaType: req.MediaType,
+		ImgURL:    req.ImgURL,
+		Rating:    req.Rating,
+		Notes:     req.Notes}
 
 	// Request the DB to Create the Media.
 	savedMedia, err := config.MediaRepository.Create(media)
@@ -61,14 +59,14 @@ func (config *MediaConfig) PostHandler(w http.ResponseWriter, r *http.Request) {
 	}
 
 	// Set up to a dedicated type for the response.
-	res := &model.MediaResponse{
-		userId:    savedMedia.userId,
-		name:      savedMedia.name,
-		status:    savedMedia.status,
-		mediaType: savedMedia.mediaType,
-		imgURL:    savedMedia.imgURL,
-		rating:    savedMedia.rating,
-		notes:     savedMedia.notes}
+	res := &MediaResponse{
+		UserId:    savedMedia.UserId,
+		Name:      savedMedia.Name,
+		Status:    savedMedia.Status,
+		MediaType: savedMedia.MediaType,
+		ImgURL:    savedMedia.ImgURL,
+		Rating:    savedMedia.Rating,
+		Notes:     savedMedia.Notes}
 
 	render.Status(r, http.StatusOK)
 	render.JSON(w, r, res)
@@ -81,29 +79,22 @@ func (config *MediaConfig) PostHandler(w http.ResponseWriter, r *http.Request) {
 // @Produce      json
 // @Param        id   path      string  true  "media ID"
 // @Security     BearerAuth
-// @Success      200  {object}  model.mediaResponse
+// @Success      200  {object}  MediaResponse
 // @Failure      404  {object}  map[string]string  "Media not found"
 // @Failure      500  {object}  map[string]string  "Failed to find specific Media !"
 // @Router       /api/v1/media/{id} [get]
 func (config *MediaConfig) GetByIdHandler(w http.ResponseWriter, r *http.Request) {
 
 	// Get the id in the URL
-	idStr := chi.URLParam(r, "id")
-	if idStr == "" {
-		render.Status(r, http.StatusNotFound)
-		render.JSON(w, r, map[string]string{"Error": "Missing Id !"})
-		return
-	}
-
-	uuid, err := uuid.Parse(idStr)
+	id, err := strconv.Atoi(chi.URLParam(r, "id"))
 	if err != nil {
-		render.Status(r, http.StatusInternalServerError)
-		render.JSON(w, r, map[string]string{"Error": "Invalid Id !" + err.Error()})
+		render.Status(r, http.StatusNotFound)
+		render.JSON(w, r, map[string]string{"Error": "Failed to retrieve ID !"})
 		return
 	}
 
 	// Request the DB to Get the needed informations
-	media, err := config.MediaRepository.FindById(uuid)
+	media, err := config.MediaRepository.FindById(uint(id))
 	if err != nil {
 		render.Status(r, http.StatusNotFound)
 		render.JSON(w, r, map[string]string{"Error": "Failed to Find specific Media !" + err.Error()})
@@ -111,14 +102,14 @@ func (config *MediaConfig) GetByIdHandler(w http.ResponseWriter, r *http.Request
 	}
 
 	// Set up to a dedicated type for the response
-	res := &model.MediaResponse{
-		userId:    media.userId,
-		name:      media.name,
-		status:    media.status,
-		mediaType: media.mediaType,
-		imgURL:    media.imgURL,
-		rating:    media.rating,
-		notes:     media.notes}
+	res := &MediaResponse{
+		UserId:    media.UserId,
+		Name:      media.Name,
+		Status:    media.Status,
+		MediaType: media.MediaType,
+		ImgURL:    media.ImgURL,
+		Rating:    media.Rating,
+		Notes:     media.Notes}
 
 	render.Status(r, http.StatusOK)
 	render.JSON(w, r, res)
@@ -130,7 +121,7 @@ func (config *MediaConfig) GetByIdHandler(w http.ResponseWriter, r *http.Request
 // @Tags         Media
 // @Produce      json
 // @Security     BearerAuth
-// @Success      200  {array}   model.MediaResponse
+// @Success      200  {array}   MediaResponse
 // @Failure      500  {object}  map[string]string
 // @Router       /api/v1/media [get]
 func (config *MediaConfig) GetAllHandler(w http.ResponseWriter, r *http.Request) {
@@ -152,10 +143,10 @@ func (config *MediaConfig) GetAllHandler(w http.ResponseWriter, r *http.Request)
 // @Tags         Media
 // @Accept       json
 // @Produce      json
-// @Param        id    path      string               true  "Media ID"
-// @Param        media  body      model.mediaRequest   true  "Updated media payload"
+// @Param        id     path     string        true  "Media ID"
+// @Param        media  body     MediaRequest  true  "Updated media payload"
 // @Security     BearerAuth
-// @Success      200   {object}  model.mediaResponse
+// @Success      200   {object}  MediaResponse
 // @Failure      400   {object}  map[string]string
 // @Failure      404   {object}  map[string]string
 // @Failure      500   {object}  map[string]string
@@ -163,22 +154,15 @@ func (config *MediaConfig) GetAllHandler(w http.ResponseWriter, r *http.Request)
 func (config *MediaConfig) UpdateHandler(w http.ResponseWriter, r *http.Request) {
 
 	// Get the id in the URL
-	idStr := chi.URLParam(r, "id")
-	if idStr == "" {
-		render.Status(r, http.StatusNotFound)
-		render.JSON(w, r, map[string]string{"Error": "Missing Id !"})
-		return
-	}
-
-	id, err := uuid.Parse(idStr)
+	id, err := strconv.Atoi(chi.URLParam(r, "id"))
 	if err != nil {
-		render.Status(r, http.StatusInternalServerError)
-		render.JSON(w, r, map[string]string{"Error": "Invalid Id !" + err.Error()})
+		render.Status(r, http.StatusNotFound)
+		render.JSON(w, r, map[string]string{"Error": "Failed to retrieve ID !"})
 		return
 	}
 
 	// Get the request
-	req := &model.MediaRequest{}
+	req := &MediaRequest{}
 	if err := render.Bind(r, req); err != nil {
 		render.Status(r, http.StatusBadRequest)
 		render.JSON(w, r, map[string]string{"error": "Invalid request payload !" + err.Error()})
@@ -186,7 +170,7 @@ func (config *MediaConfig) UpdateHandler(w http.ResponseWriter, r *http.Request)
 	}
 
 	// Request the DB to get the Media data
-	existing, err := config.MediaRepository.FindById(id)
+	existing, err := config.MediaRepository.FindById(uint(id))
 	if err != nil {
 		render.Status(r, http.StatusNotFound)
 		render.JSON(w, r, map[string]string{"Error": "Media not found !" + err.Error()})
@@ -194,13 +178,13 @@ func (config *MediaConfig) UpdateHandler(w http.ResponseWriter, r *http.Request)
 	}
 
 	// TODO Check if the value is null if not put in the request
-	existing.userId = req.userId
-	existing.name = req.name
-	existing.status = req.status
-	existing.mediaType = req.mediaType
-	existing.imgURL = req.imgURL
-	existing.rating = req.rating
-	existing.notes = req.notes
+	existing.UserId = req.UserId
+	existing.Name = req.Name
+	existing.Status = req.Status
+	existing.MediaType = req.MediaType
+	existing.ImgURL = req.ImgURL
+	existing.Rating = req.Rating
+	existing.Notes = req.Notes
 
 	updatedMedia, err := config.MediaRepository.Update(existing)
 	if err != nil {
@@ -209,14 +193,14 @@ func (config *MediaConfig) UpdateHandler(w http.ResponseWriter, r *http.Request)
 		return
 	}
 
-	res := model.MediaResponse{
-		userId:    updatedMedia.userId,
-		name:      updatedMedia.name,
-		status:    updatedMedia.status,
-		mediaType: updatedMedia.mediaType,
-		imgURL:    updatedMedia.imgURL,
-		rating:    updatedMedia.rating,
-		notes:     updatedMedia.notes,
+	res := MediaResponse{
+		UserId:    updatedMedia.UserId,
+		Name:      updatedMedia.Name,
+		Status:    updatedMedia.Status,
+		MediaType: updatedMedia.MediaType,
+		ImgURL:    updatedMedia.ImgURL,
+		Rating:    updatedMedia.Rating,
+		Notes:     updatedMedia.Notes,
 	}
 
 	render.Status(r, http.StatusOK)
@@ -237,23 +221,16 @@ func (config *MediaConfig) UpdateHandler(w http.ResponseWriter, r *http.Request)
 func (config *MediaConfig) DeleteHandler(w http.ResponseWriter, r *http.Request) {
 
 	// Get the id in the URL
-	idStr := chi.URLParam(r, "id")
-	if idStr == "" {
-		render.Status(r, http.StatusNotFound)
-		render.JSON(w, r, map[string]string{"Error": "Missing Id !"})
-		return
-	}
-
-	id, err := uuid.Parse(idStr)
+	id, err := strconv.Atoi(chi.URLParam(r, "id"))
 	if err != nil {
-		render.Status(r, http.StatusInternalServerError)
-		render.JSON(w, r, map[string]string{"Error": "Invalid Id !" + err.Error()})
+		render.Status(r, http.StatusNotFound)
+		render.JSON(w, r, map[string]string{"Error": "Failed to retrieve ID !"})
 		return
 	}
 
 	// Request the DB to Delete the informations
-	errDelete := config.MediaRepository.Delete(id)
-	if errDelete != nil {
+	err = config.MediaRepository.Delete(uint(id))
+	if err != nil {
 		render.Status(r, http.StatusInternalServerError)
 		render.JSON(w, r, map[string]string{"Error": "Failed to Delete Media !" + err.Error()})
 		return
